@@ -1,22 +1,20 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.12.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'org.springframework.boot' version '2.7.18' 
+	id 'io.spring.dependency-management' version '1.1.2'
 	id 'java'
 }
 
 group = 'com.brill.server'
-version = '1.0.0'
+version = '1.0.1'
 
-// The versions of Java currently supported are 11 to 15.
-// We therefore need to maintain source compatibility with the lowest version. i.e. 11
-sourceCompatibility = 11
-
-// tasks.withType(JavaCompile) {
-//     options.compilerArgs += '--enable-preview'
-// }
-// tasks.withType(Test) {
-//     jvmArgs += "--enable-preview"
-// }
+// The versions of Java currently supported are 11 to 17.
+// Note that the Gradle for Java VS Code plug-in is hardcoded to use 11.
+// This prevents us from upgrading to Spring Boot 3.2.4
+// See https://github.com/redhat-developer/vscode-java/issues/3136
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_17 
+}
 
 configurations {
 	developmentOnly
@@ -44,41 +42,41 @@ dependencies {
 	}
 
     // Eclipse JGit Library - used to access Git repository in GitRepository.java
-	compile 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'
-	compile 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:6.5.0.202303070854-r'
+	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'
+	implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:6.5.0.202303070854-r'
 
 	
     // Bouncy Castle Crypto Library - used for Eliptical Curve operation in Crypto.java
-    compile 'org.bouncycastle:bcpkix-jdk18on:1.72'
+    implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
 
 	// Mozilla Rhino library - used to run JavaScript in JavaScriptService.java
-	compile 'org.mozilla:rhino:1.7.13'
+	implementation 'org.mozilla:rhino:1.7.13'
 
 	// Added for JUnit 5
-	testCompile("org.junit.jupiter:junit-jupiter-api:5.3.1")
-	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.1")
-	testCompile("org.junit.platform:junit-platform-runner:1.3.1")
-	testCompile ("org.mockito:mockito-core:2.22.0")
-	testRuntime("org.mockito:mockito-junit-jupiter:2.22.0")
+	testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.1")
+	testImplementation("org.junit.jupiter:junit-jupiter-engine:5.3.1")
+	testImplementation("org.junit.platform:junit-platform-runner:1.3.1")
+	testImplementation ("org.mockito:mockito-core:2.22.0")
+	testImplementation("org.mockito:mockito-junit-jupiter:2.22.0")
 	testImplementation("org.mockito:mockito-core:2.22.0")
 	testImplementation("org.mockito:mockito-junit-jupiter:2.22.0")
-	testCompile("org.apache.logging.log4j:log4j-jul:2.11.1")
+	testImplementation("org.apache.logging.log4j:log4j-jul:2.11.1")
 
     // WebSockets
-    compile("org.springframework:spring-websocket:5.2.8.RELEASE")
-	compile("org.springframework:spring-messaging:5.2.8.RELEASE")
+    implementation("org.springframework:spring-websocket:5.2.8.RELEASE")
+	implementation("org.springframework:spring-messaging:5.2.8.RELEASE")
 
-	compile("org.apache.logging.log4j:log4j-api:2.11.1")
-	compile("org.apache.logging.log4j:log4j-core:2.11.1")
+	implementation("org.apache.logging.log4j:log4j-api:2.11.1")
+	implementation("org.apache.logging.log4j:log4j-core:2.11.1")
 
-	compile("org.apache.logging.log4j:log4j-slf4j18-impl:2.11.1")
-	compile("org.slf4j:slf4j-api:1.7.25")
-	compile("org.slf4j:jul-to-slf4j:1.7.25")
+	implementation("org.apache.logging.log4j:log4j-slf4j18-impl:2.11.1")
+	implementation("org.slf4j:slf4j-api:1.7.25")
+	implementation("org.slf4j:jul-to-slf4j:1.7.25")
 
-	compile("commons-io:commons-io:2.6")
-	compile("javax.json:javax.json-api:1.1.4")
-	compile("org.glassfish:javax.json:1.1.4")
-	compile("mysql:mysql-connector-java:8.0.19")
+	implementation("commons-io:commons-io:2.6")
+	implementation("javax.json:javax.json-api:1.1.4")
+	implementation("org.glassfish:javax.json:1.1.4")
+	implementation("mysql:mysql-connector-java:8.0.19")
 }
 
 test {
@@ -86,6 +84,7 @@ test {
 }
 
 task copyWebApp(type: Copy) {
+	logger.quiet('Copying the contents of web app build directory ../brill_client/build into src/main/resources/static')
 	from '../brill_client/build'
   	into 'src/main/resources/static/.'
 }
